--- a/Source/BassAudioSource.vcxproj.filters
+++ b/Source/BassAudioSource.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BassHelper.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -57,6 +60,9 @@
       <Filter>Utils</Filter>
     </ClInclude>
     <ClInclude Include="dllmain.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BassHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
