Отключены предупреждения IntelliSense C26451. Косметика кода.

--- a/Source/BassAudioSource.vcxproj
+++ b/Source/BassAudioSource.vcxproj
@@ -54,6 +54,7 @@
     </PreBuildEvent>
     <ClCompile>
       <AdditionalIncludeDirectories>$(ProjectDir)</AdditionalIncludeDirectories>
+      <DisableSpecificWarnings>26451</DisableSpecificWarnings>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
