--- a/Source/BassAudioSource.vcxproj
+++ b/Source/BassAudioSource.vcxproj
@@ -69,6 +69,7 @@
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Utils\StringUtil.cpp" />
+    <ClCompile Include="Utils\Util.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BassDecoder.h" />
@@ -81,6 +82,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Utils\ByteReader.h" />
     <ClInclude Include="Utils\StringUtil.h" />
+    <ClInclude Include="Utils\Util.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="BassAudioSource.rc" />
