Добавлена окно информации. Пока в ней отображается только версия фильтра.

--- a/Source/BassAudioSource.vcxproj
+++ b/Source/BassAudioSource.vcxproj
@@ -64,7 +64,9 @@
     <ClCompile Include="BassSource.cpp" />
     <ClCompile Include="BassSourceStream.cpp" />
     <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="Helper.cpp" />
     <ClCompile Include="ID3v2Tag.cpp" />
+    <ClCompile Include="PropPage.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
     </ClCompile>
@@ -77,7 +79,10 @@
     <ClInclude Include="BassSource.h" />
     <ClInclude Include="BassSourceStream.h" />
     <ClInclude Include="dllmain.h" />
+    <ClInclude Include="Helper.h" />
+    <ClInclude Include="IBassSource.h" />
     <ClInclude Include="ID3v2Tag.h" />
+    <ClInclude Include="PropPage.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Utils\ByteReader.h" />
