Макрос _DEBUG не требуется задавать вручную для ClCompile. Для ResourceCompile надо задавать, чтобы прописался правильный FILEFLAGS в VS_FIXEDFILEINFO.

--- a/common.props
+++ b/common.props
@@ -48,6 +48,9 @@
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
+    <ResourceCompile>
+      <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+    </ResourceCompile>
     <Link>
       <ImageHasSafeExceptionHandlers Condition="'$(Platform)'=='Win32'">false</ImageHasSafeExceptionHandlers>
       <GenerateDebugInformation>DebugFastLink</GenerateDebugInformation>
