--- a/Source/BassAudioSource.vcxproj.filters
+++ b/Source/BassAudioSource.vcxproj.filters
@@ -101,4 +101,9 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="res\BassAudioSource.rc2">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
